add digital clock and date

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock Face</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -26,6 +29,9 @@
         <div class="number number10">X</div>
         <div class="number number11">XI</div>
         <div class="number number12">XII</div>
+        <div class="time" data-time></div>
+        <div class="day" data-day></div>
+        <div class="date" data-date></div>
     </div>
     <script src="app.js"></script>
 </body>
